Display a TextTrackCue when snap-to-lines flag is not set https://bugs.webkit.org/show_bug.cgi?id=79750

Patch by Victor Carbune <vcarbune@adobe.com> on 2012-04-19
Reviewed by Eric Carlson.

Source/WebCore:

Support for positioning of a cue on top of the video element when snap-to-lines is not set.

Test: media/track/track-cue-rendering-snap-to-lines-not-set.html

* css/mediaControls.css:
(video::-webkit-media-text-track-container): Marked the container as
flexible box in order to use all the available space on top of the controls.
(video::-webkit-media-text-track-background): Added background default settings.
(video::-webkit-media-text-track-display): Added default position.
* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateDisplay): Updated comments.
* html/track/TextTrackCue.cpp:
(WebCore):
(WebCore::TextTrackCue::TextTrackCue): Updated constructor to calculate
the computed line position.
(WebCore::TextTrackCue::setLine): Updated call to calculate the computed line
position.
(WebCore::TextTrackCue::setPosition):
(WebCore::TextTrackCue::calculateComputedLinePosition): Partial calculation of the
computated line position.
(WebCore::TextTrackCue::calculateDisplayParameters): Updated display parameter computations
required by the spec.
(WebCore::TextTrackCue::getDisplayTree): Updated positioning attributes when snap-to-lines
is not set. Added extra anonymous box for background, because setting position:absolute
on the display tree determines the background to cover the whole block, not just inline.
(WebCore::TextTrackCue::getPositionCoordinates): Determine coordinates as required by the spec.
* html/track/TextTrackCue.h:
(TextTrackCue):

LayoutTests:

Added tests to support positioning of cues when snap-to-lines set.

* media/media-controls.js:
(textTrackDisplayElement): Added an extra parameter, to return the display
box of the N-th active cue.
* media/track/captions-webvtt/captions-snap-to-lines-not-set.vtt: Added.
* media/track/track-cue-rendering-expected.txt: Updated background color check.
* media/track/track-cue-rendering-snap-to-lines-not-set-expected.txt: Added.
* media/track/track-cue-rendering-snap-to-lines-not-set.html: Added.
* media/track/track-cue-rendering.html: Updated background color check.

Canonical link: https://commits.webkit.org/101841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114640 268f45cc-cd09-0410-ab3c-d52691b4dbfc